# gdg-backend

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  seed.py
.github/workflows/: azure-webapp.yml
app/agents/: agent.py  dispatch_agent.py  hospital_agent.py  intake_agent.py  location_agent.py  telemetry_agent.py  triage_agent.py
app/agents/tools/: ambulance.py  fetch_nearby.py  hospital.py  incident.py
app/api/: auth.py  blood_management.py  chatbot.py  donors.py  incident.py
app/core/: config.py
app/db/: crud.py  session.py
app/schemas/: ambulance.py  hospital.py  incident.py  responder.py  response.py  user.py
app/services/: analytics.py  blood_bridge.py  chatbot.py  gamification.py
